force-app/main/default/objects/JU_Category__c/JU_Category__c.object-meta.xml
<CustomObject>
    <label>住環境_カテゴリ別</label>
    <nameField>
        <displayFormat>J-{0000000000}</displayFormat>
        <label>住環境_カテゴリ別名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>