force-app/main/default/objects/JU_Category__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境_カテゴリ別</relationshipLabel>
    <relationshipName>JU_CategoryAccount</relationshipName>
    <type>Lookup</type>
</CustomField>