force-app/main/default/objects/JU_Category__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>石膏</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JU_Category</valueSetName>
    </valueSet>
</CustomField>