force-app/main/default/objects/JU_Category__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <label>基礎資材</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JU_Category</valueSetName>
    </valueSet>
</CustomField>