force-app/main/default/objects/JU_Category__c/fields/Num_Category1__c.field-meta.xml
<CustomField>
    <fullName>Num_Category1__c</fullName>
    <formula>IF(ISNUMBER(TEXT(Category1__c)) ,VALUE(TEXT(Category1__c)),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>石膏</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>