force-app/main/default/objects/JU_Category__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>住環境_カテゴリ別</relationshipLabel>
    <relationshipName>Ju_Opportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>