force-app/main/default/objects/JU_Category__c/fields/OppStatus__c.field-meta.xml
<CustomField>
    <fullName>OppStatus__c</fullName>
    <label>商談フェーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>