force-app/main/default/objects/JU_Category__c/fields/T1_Account__c.field-meta.xml
<CustomField>
    <fullName>T1_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先_T1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境_カテゴリ別 (取引先_T1)</relationshipLabel>
    <relationshipName>JU_CategoryAccountT1</relationshipName>
    <type>Lookup</type>
</CustomField>